Fixed display when jumping to links

--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ body {
     color: var(--text);
 }
 :root{
-	scroll-padding: 80px;
+	scroll-padding: 40px;
 	scroll-behavior: smooth;
 }
 
@@ -260,7 +260,7 @@ p {
 
     // c-recipe-wrap
     &-wrap {
-        padding: 3rem 2rem 7rem 2rem;
+        padding: 3rem 2rem 5rem 2rem;
     }
 
     // c-recipe-container
@@ -1024,7 +1024,7 @@ p {
 
     // l-column-main-product
     &-product {
-        padding: 6vh 3vw;
+        padding: 6rem 3rem;
         &-wrap {
             padding-top: 3vh;
             display: grid;
@@ -1449,6 +1449,8 @@ p {
 // l-product-description
 .l-product-description {
     &-section {
+        padding-top: 2.4rem;
+
         &-top {
             padding: 0 1rem;
             margin-bottom: 8vh;
